# openvmm-arm-cca

./: Cargo.toml
.cargo/: config.toml
Guide/src/dev_guide/dev_tools/: xflowey.md
flowey/flowey_hvlite/src/pipelines/: cca_fvp.rs  cca_fvp_test.rs  cca_tests.rs  mod.rs
flowey/flowey_lib_hvlite/src/_jobs/: local_check_cca_emu_prereq.rs  local_install_cca_emu.rs  local_install_shrinkwrap.rs  local_openvmm_repo.rs  local_run_cca_test.rs  local_shrinkwrap_build.rs  local_shrinkwrap_run.rs  local_update_cca_emu.rs  mod.rs
openhcl/hcl/: Cargo.toml
openhcl/hcl/src/: ioctl.rs  mapped_page.rs  protocol.rs
openhcl/hcl/src/ioctl/: cca.rs  register.rs
openhcl/openhcl_boot/src/host_params/: shim_params.rs
openhcl/openhcl_dma_manager/src/: lib.rs
openhcl/underhill_mem/: Cargo.toml
openhcl/underhill_mem/src/: init.rs  lib.rs
openhcl/virt_mshv_vtl/: Cargo.toml
openhcl/virt_mshv_vtl/src/: lib.rs
support/safe_intrinsics/src/: lib.rs
tmk/simple_tmk/: Cargo.toml
tmk/simple_tmk/src/: main.rs
tmk/tmk_core/src/: aarch64.rs
tmk/tmk_vmm/: Cargo.toml
tmk/tmk_vmm/src/: load.rs  main.rs  paravisor_vmm.rs  run.rs
vm/aarch64/aarch64defs/: Cargo.toml
vm/aarch64/rsi/: Cargo.toml
vm/aarch64/rsi/src/: lib.rs
vm/hv1/hv1_emulator/: Cargo.toml
vm/loader/src/: elf.rs
vmm_core/virt/src/: generic.rs
vmm_tests/petri_artifact_resolver_openvmm_known_paths/src/: lib.rs
vmm_tests/petri_artifacts_vmm_test/src/: lib.rs
vmm_tests/vmm_tests/: Cargo.toml
vmm_tests/vmm_tests/test_data/: cca_planes.yaml  cca_realm_overlay.yaml
vmm_tests/vmm_tests/tests/: cca.rs
(+12 files in other folders)
